test(repository): update ConnectionRepositoryTest to use getFirst() method